fix height on safari

--- a/styles/Gallery.module.scss
+++ b/styles/Gallery.module.scss
@@ -24,7 +24,7 @@
     }
     img {
       width: auto;
-      height: 100%;
+      max-height: 300px;
       border: 2px solid $sand-light;
       &.highlight {
         cursor: zoom-in;
@@ -33,7 +33,7 @@
     video {
       border: 2px solid $sand-light;
       width: auto;
-      height: 100%;
+      max-height: 300px;
       &.highlight {
         cursor: zoom-in;
       }
